--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@graphql-tools/merge": "^9.1.7",
+    "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "graphql": "^16.12.0",
     "nodemon": "^3.1.11"
   }
 }
